force-app/main/default/objects/ccrz__E_ShippingRate__c/ccrz__E_ShippingRate__c.object-meta.xml
<CustomObject>
    <description>Shipping options/rates table</description>
    <label>CC Shipping Rate</label>
    <nameField>
        <label>CC Shipping Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Shipping Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>