force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__Air__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Air__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Air required</description>
    <label>Air</label>
    <type>Checkbox</type>
</CustomField>