force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CurrencyISOCode__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>