force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__MaxWeight__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MaxWeight__c</fullName>
    <label>Max Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>