force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__MinWeight__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MinWeight__c</fullName>
    <label>Min Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>