force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__NextDayAir__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NextDayAir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Day Air</label>
    <type>Checkbox</type>
</CustomField>