force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>To display Shipping Methods in Ascending Order</description>
    <inlineHelpText>To display Shipping Methods in Ascending Order</inlineHelpText>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>