force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__Shipper__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Shipper__c</fullName>
    <label>Shipper</label>
    <length>128</length>
    <type>Text</type>
</CustomField>