force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__ShippingRate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippingRate__c</fullName>
    <label>Shipping Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>