force-app/main/default/objects/ccrz__E_ShippingRate__c/fields/ccrz__ShippingRateId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippingRateId__c</fullName>
    <externalId>true</externalId>
    <label>ShippingRateId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>